# eu-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: launch.json
api/: deps.py  main.py
api/middleware/: headers.py  ratelimit.py
api/routes/: account.py  admin.py  auth.py  conversations.py  documents.py  ingest.py  query.py
core/: config.py  conversations.py  db.py  pipeline.py  quota.py  registry.py
core/evaluation/: golden.py  harness.py
core/generation/: answerer.py  citations.py  llm_client.py
core/ingestion/: chunker.py  document_loader.py  embedder.py
core/retrieval/: bm25.py  expansion.py  hybrid_retriever.py  reranker.py  vector_store.py
core/security/: auth.py  crypto.py  pii.py
data/: seed.py
data/samples/: eu_funding_overview.txt  eu_sme_definition.txt  gdpr_key_articles.txt  national_schemes.txt
data/scrapers/: common.py  eurlex.py  funding_calls.py  portals.py
docs/: ARCHITECTURE.md  CORPUS_SHORTLIST.md  DATA_SOURCES.md  DEPLOY.md  DEVLOG.md  PROJECT_PLAN.md  SECURITY.md  WIKI.md
frontend/static/: index.html
frontend/web/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json
infra/: Caddyfile
infra/scripts/: check_links.py
tests/: conftest.py  test_api.py  test_hardening.py  test_postgres.py  test_security.py  test_tiers.py
tests/evaluation/: test_golden_retrieval.py
tests/unit/: test_answerer.py  test_auth.py  test_bm25.py  test_chunker.py  test_citations.py  test_crypto.py  (+10 more)
(+7 files in other folders)
